--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Alegreya&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Alegreya&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Alegreya&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
 body {
   margin: 0;
@@ -12,11 +12,11 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-#note{
+#note {
   max-width: 90%;
   display: flex;
   text-align: left;
@@ -24,55 +24,50 @@ code {
   padding: 1rem;
   border: 1px solid grey;
   border-radius: 1rem;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
-#cardShadow{
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+#cardShadow {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   border-radius: 1rem;
 }
-/* h1{
-  font-family: "Alegreya", serif;
-  font-optical-sizing: auto;
-  font-weight: 800;
-  font-style: normal;
-} */
 
-
-.updateButton{
+.updateButton {
   padding: 0 0.2rem 0 0.2rem;
   margin-left: 1rem;
   font-size: 0.6rem;
-  font-weight:600;
+  font-weight: 600;
   border-radius: 0.4rem;
   max-height: 1.5rem;
   color: rgb(5, 5, 102);
   border: 1px solid gray;
 }
 
-#deleteButton{
+#deleteButton {
   background-color: brown;
 }
 
-#updateButton{
+#updateButton {
   background-color: dodgerblue;
 }
 
-#LogInButton{
+#LogInButton {
   background-color: dodgerblue;
 }
 
-#logo{
+#logo {
   font-size: 1.7rem;
   font-weight: 400;
 }
 
-@media screen and (max-width:500px) {
-  #logo{
+@media screen and (max-width: 500px) {
+  #logo {
     font-size: 1.5rem;
   }
 
-  #LogInButton{
+  #LogInButton {
     font-size: 1rem;
   }
 }
