--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 .mainDiv {
@@ -133,6 +134,13 @@ ol li {
 
   .listCard {
     width: 100%;
+  }
+
+  .operationControl{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
 
