--- a/src/index.css
+++ b/src/index.css
@@ -79,4 +79,11 @@ code {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  border-radius: 1rem;
 }
+
+/* img[alt]{
+ visibility: hidden;
+ background-image: url('./Components/image.png');
+} */
