--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,14 @@ ol li {
     align-items: center;
     justify-content: center;
   }
+  
+  .operationControl label{
+    margin-top: 1rem;
+  }
+
+  .operationControl button{
+    margin-top: 1rem;
+  }
 }
 
 @media screen and (min-width: 550px) and (max-width: 700px) {
