--- a/src/App.css
+++ b/src/App.css
@@ -150,6 +150,13 @@ ol li {
   .operationControl button{
     margin-top: 1rem;
   }
+
+}
+
+@media screen and (max-width: 450px) {
+  #searchBox{
+    width: 50% !important;
+  }
 }
 
 @media screen and (min-width: 550px) and (max-width: 700px) {
